--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,9 @@
-<!doctype html>
-<html lang="ru">
-<head>
-  <meta charset="utf-8" />
-  <title>Hello world</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title%} Home {% endblock %}
+
+
+
+{% block content %}
 <h1>Hello {{name}}! </h1>
-</body>
-</html>
+{% endblock %}
